name: timer-wheel
version: 0.1.0
build-type: Simple
cabal-version: >= 1.8

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      atomic-primops
    , base
    , clock
    , psqueues
    , stm
    , vector
  exposed-modules:
    Data.TimerWheel
  other-modules:
    Entries
    EntriesPSQ
    Entry
    Supply
    Timestamp

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded
  build-depends:
      base
    , clock
    , deepseq
    , gauge
    , random
    , timer-wheel

executable bench-exe
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
      base
    , clock
    , deepseq
    , gauge
    , random
    , timer-wheel
